fix: fixed alignment of bottom buttons

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -253,7 +253,7 @@ article {
   position: absolute;
   gap: 5px;
   bottom: 0;
-  right: 5px;
+  right: 22px;
   font-size: 0;
 }
 #github a {
